# CairoHBD

./: COPYING  README  config-linux-minigui  configure.ac
boilerplate/: Makefile.am  Makefile.win32.features
perf/: Makefile.am  Makefile.sources  cairo-perf-diff
perf/micro/: Makefile.am  Makefile.sources
src/: Makefile.am  Makefile.sources  Makefile.win32.features  cairo-pattern.c  cairo-uninstalled.pc.in  cairo.h  hicairo-features-uninstalled.pc.in  hicairo-features.pc.in  hicairo-uninstalled.pc.in  hicairo.pc.in
src/drm/: cairo-drm.c
src/minigui/: cairo-minigui-surface.c
test/: Makefile.am
test/pdiff/: Makefile.am
util/: Makefile.am
util/cairo-fdr/: fdr.c
util/cairo-gobject/: Makefile.am
util/cairo-missing/: Makefile.am  Makefile.sources
util/cairo-script/: Makefile.am  Makefile.sources
util/cairo-sphinx/: Makefile.am  fdr.c
util/cairo-trace/: Makefile.am  cairo-trace.in  trace.c
